--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -91,6 +91,15 @@
       name: Alexa Internet
       url: https://www.alexa.com
 -
+  user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_1) AppleWebKit/600.2.5 (KHTML, like Gecko) Version/8.0.2 Safari/600.2.5 (Amazonbot/0.1; +https://developer.amazon.com/support/amazonbot)
+  bot:
+    name: Amazon Bot
+    category: Crawler
+    url: https://developer.amazon.com/support/amazonbot
+    producer:
+      name: Amazon.com, Inc.
+      url: https://www.amazon.com/
+-
   user_agent: Amazon Route 53 Health Check Service; ref:xxxxxxxx-xxxx-xxxxxxxxx-xxxxxxxxxxxx; report http://amzn.to/xxxxxxx
   bot:
     name: Amazon Route53 Health Check
